connected to API

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,3 +1,24 @@
 
-<nav><p>GIPHY SEARCH WEBSITE</p>
-</nav>
+    <nav class="navbar navbar-expand-sm bg-light">
+
+        <div class="container">
+   
+<p>GIPHY SEARCH WEBSITE</p>
+<div class="row">
+          <ul class="navbar-nav">
+              <div class="column-sm-4">
+            <li class="nav-item">
+              <a class="nav-link" href="#"><button>HOME</button></a>
+            </li>
+        </div>
+    
+            <li class="nav-item">
+              <a class="nav-link" href="#"><button>GIPHY GIFS</button></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#"><button>FOOTER</button></a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      </nav>
