--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
-
+/* @import "~bootstrap/dist/css/bootstrap.css" */
 @import "https://bootswatch.com/cosmo/bootstrap.min.css";
+
 *{margin: 0;
 padding: 0;
 font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;}
+
+body{
+    background-color: rgb(22, 21, 21);
+}
