--- a/src/styles.css
+++ b/src/styles.css
@@ -6,6 +6,6 @@
 padding: 0;
 font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;}
 
-body{
+/* body{
     background-color: rgb(22, 21, 21);
-}
+} */
