--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,24 +1,29 @@
+<div class ="container" id="nav"> 
 
-    <nav class="navbar navbar-expand-sm bg-light">
+  <nav class="navbar navbar-expand-lg ">
+    <a class="navbar-brand" href="#">GIPHY</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Home </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Trending</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Reaction</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Artist</a>
+        </li>
+        <li>  <input type="text" id ="user"  class="form-control" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1">
+        </li>
+      </ul>
+    </div>
+  </nav>
+  
 
-        <div class="container">
-   
-<p>GIPHY SEARCH WEBSITE</p>
-<div class="row">
-          <ul class="navbar-nav">
-              <div class="column-sm-4">
-            <li class="nav-item">
-              <a class="nav-link" href="#"><button>HOME</button></a>
-            </li>
-        </div>
-    
-            <li class="nav-item">
-              <a class="nav-link" href="#"><button>GIPHY GIFS</button></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#"><button>FOOTER</button></a>
-            </li>
-          </ul>
-        </div>
-      </div>
-      </nav>
+ </div>
