--- a/src/app/search/search.component.css
+++ b/src/app/search/search.component.css
@@ -1,12 +1,23 @@
 .search{
-    max-width:600px;
+    max-width:995px;
     margin:30px auto;
     text-align: center;
     font-size: 18px;
+    position: relative;
+    right:15px;
+    left: 10px;
+    font-family:interface;
+
 }
 
 .search input{
     width: 100%;
     padding: 8px 16px;
     margin-top: 20px;
+}
+#h{
+    color: white;
+    font-family: interface;
+    font-weight: 400;
+
 }
