--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,5 +1,5 @@
 <div class=search>
-<h4>Search For GIFS</h4>
+<h4 id="h">Search For GIFS</h4>
 
 <input type="text" placeholder="Search For GIFS" #gif (keyup.enter)="search(gif.value)">
 
