This commit solves bugs on api keys

--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,6 +1,7 @@
 <div class=search>
 <h4 id="h">Search For GIFS</h4>
 
-<input type="text" placeholder="Search For GIFS" #gif (keyup.enter)="search(gif.value)">
+<input type="text" placeholder="Search For GIFS" 
+#gif (keyup.enter)="search(gif.value)">
 
 </div>
